# semantic_drift

./: .gitignore  CHAIN_ANALYSIS.md  README.md  go.mod  pyproject.toml
fake_api/: main.go  main_test.go
prompts/: rewrite-neutral-guided.md  rewrite-neutral.md  rewrite.md
runs/go-bash-go/01-go/project/: run.sh
runs/go-bash-go/02-bash/project/: run.sh
runs/go-bash-go/03-go/project/: go.mod  main.go  run.sh
runs/go-erlang-go/02-erlang/project/: rebar.config  run.sh
runs/go-erlang-go/02-erlang/project/src/: todo_summary.app.src  (+1 more)
runs/go-erlang-go/03-go/project/: go.mod  main.go  run.sh
runs/go-php-go/02-php/project/: composer.json  run.sh
runs/go-php-go/03-go/project/: go.mod  main.go  run.sh
runs/latest/01-go/project/: go.mod  main.go
runs/latest/02-typescript/project/: package-lock.json  package.json  run.sh
runs/latest/03-python/project/: pyproject.toml  run.sh
runs/latest/04-ruby/project/: Gemfile  run.sh
runs/latest/05-cpp/project/: CMakeLists.txt  run.sh
runs/latest/05-cpp/project/src/: main.cpp
runs/latest/05-php/project/: composer.json  run.sh
runs/latest/06-java/project/: dependency-reduced-pom.xml  pom.xml  run.sh
runs/latest/07-haskell/project/: run.sh  semantic-drift-todos.cabal  todo-summary.cabal
runs/latest/07-haskell/project/app/: Main.hs
runs/latest/08-common-lisp/project/: main.lisp  run.sh  todo-summary.asd
runs/latest/09-zig/project/: build.zig  run.sh
runs/latest/10-rust/project/: Cargo.toml  run.sh
runs/latest/11-go/project/: go.mod  main.go  run.sh
runs/run-20260621-202351/: CHAIN_ANALYSIS.md  README.md
runs/run-20260621-202351/01-go/project/: go.mod
runs/run-20260621-202351/02-typescript/project/: package-lock.json  package.json  run.sh
runs/run-20260621-202351/03-python/project/: pyproject.toml  run.sh  todo_report.py
runs/run-20260621-202351/04-ruby/project/: Gemfile  run.sh  todo_report.rb
runs/run-20260621-202351/05-cpp/project/: Makefile  main.cpp  run.sh
runs/run-20260621-202351/06-java/project/: run.sh
runs/run-20260621-202351/07-haskell/project/: run.sh  todo-report-hs.cabal
runs/run-20260621-202351/07-haskell/project/app/: Main.hs
runs/run-20260621-202351/08-common-lisp/project/: main.lisp  run.sh
runs/run-20260621-202351/09-zig/project/: build.zig  run.sh
runs/run-20260621-202351/10-rust/project/: Cargo.toml  run.sh
runs/run-20260621-202351/11-go/project/: go.mod  main.go  run.sh
scripts/: run_chain.sh  verify_project.py
seed/: contract.md  expected.txt  todos.json
semantic_drift/: __init__.py  __main__.py  cli.py  conformance.py  prompt.py
tests/: test_conformance.py  test_prompt.py
(+92 files in other folders)
