cabal-version:      3.0
name:               semantic-drift-todos
version:            1.0.0
build-type:         Simple

executable semantic-drift-todos
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
      base >= 4.16 && < 5
    , aeson
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , process
    , scientific
    , text
    , time
    , vector
