cabal-version:      3.0
name:               todo-summary
version:            1.0.0
build-type:         Simple

executable todo-summary
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unused-do-bind
  build-depends:
      base >=4.18 && <5
    , aeson >=2.2
    , bytestring
    , case-insensitive
    , containers
    , http-client >=0.7
    , http-client-tls
    , http-types
    , scientific
    , text
    , time
    , vector
