cabal-version:      3.0
name:               todo-report-hs
version:            0.1.0.0
build-type:         Simple

executable todo-report
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -O2 -Wall
  build-depends:
      base >= 4.18 && < 5
    , process
    , time
